working towards having testing worlds with obstacles

--- a/buzzmobile/package.xml
+++ b/buzzmobile/package.xml
@@ -51,7 +51,7 @@
   <run_depend>joint_state_controller</run_depend>
 
   <export>
-    <gazebo_ros gazebo_model_path="${prefix}/simulation/models/world/materials"/>
-    <gazebo_ros gazebo_media_path="${prefix}/simulation/models/world/materials"/>
+    <gazebo_ros gazebo_model_path="${prefix}"/>
+    <gazebo_ros gazebo_media_path="${prefix}"/>
   </export>
 </package>
